--- a/MinhaLojaDeGames/minhaLojaDeGames/minhaLojaDeGames/src/main/resources/application.properties
+++ b/MinhaLojaDeGames/minhaLojaDeGames/minhaLojaDeGames/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/db_loja_de_games?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=0EKifG7p
+spring.datasource.password=root
 spring.jpa.show-sql=true
